--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Cal's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+    
 </head>
 
 
@@ -11,13 +13,13 @@
     <table>
         <tr>
             <td>
-                <img src="images/calmarston.png" alt="Cal Image" width="200">
+                <img src="images/calmarston.png" alt="Cal Image" width="300">
             </td>
 
             <td>
                 <h1>Calvin Paiva</h1>
                 <p><em>Founder of SimplyDot</em></p>
-                <p>A flutter Developer</p>
+                <p>A Flutter Developer</p>
 
             </td>
         </tr>
@@ -26,8 +28,8 @@
 
     <h3>Completed Courses</h3>
     <ul>
-        <li>The Complete Web Development Course</li>
-        <li>The Complete Flutter Development Course</li>
+        <li>The Complete Web Developmnt Course</li>
+        <li>The Complete Flutter Developement Course</li>
     </ul>
 
     <h3>Skills</h3>
